# fuckjpeg

./: .gitignore  LICENSE  README.md  SECURITY.MD  pyproject.toml  requirements-dev.txt
fuckjpeg/: __init__.py  __main__.py
