[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = [
    "version", "description"
]

dependencies = [
    "click >=8.0.1"
]

keywords = [
    "rename",
    "filename",
    "images",
    "image",
    "jpeg",
    "jpg"
]
name = "fuckjpeg"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "flit"
]

[project.urls]
Home = "https://github.com/yaleman/fuckjpeg"

[project.scripts]
fuckjpeg = "fuckjpeg.__main__:cli"


[tool.flit.sdist]
exclude = [
    "requirements*.txt",
    ".gitignore",
    ".pylintrc"
]